gfse: more readable layout for not so simple grammars + bug fix
To make definitions that span multiple lines more readable in guided mode,
preserve line breaks and indentation when lin and oper definitions are
displayed and edited in guided mode.

Bug fix: moving the cursor by clicking and selecting text by dragging did
not work in textareas and input fields, because those mouse event were
intercepted by the sort-by-drag-and-drop handler.

--- a/src/www/gfse/editor.css
+++ b/src/www/gfse/editor.css
@@ -77,6 +77,9 @@ div.template:hover
  tr.deletable:hover .delete 
   { visibility: visible; }
 
+.editable { white-space: pre; }
+div.lin span.editable { display: inline-block; vertical-align: top; }
+
 .more { color: green; }
 .edit { color: orange; }
 .delete { color: red; }
@@ -110,7 +113,8 @@ table.tabs input[type=button], table.matrixview th input[type=button] {
     /*text-decoration: underline;*/
 }
 
-input.string_edit { font-family: inherit; font-size: inherit; }
+.string_edit { font-family: inherit; font-size: inherit; }
+textarea.string_edit { vertical-align: top; }
 
 ul.languages { -moz-column-width: 20em; }
 
